Fix edit bookmark button visibility

--- a/project/src/Clippy/wwwroot/css/main.css
+++ b/project/src/Clippy/wwwroot/css/main.css
@@ -264,7 +264,7 @@
   margin: auto 10px;
 }
 
-.title-icon-container h3 {
+.title-icon-container span {
   margin: 0px 10px;
   overflow: hidden;
   max-width: 250x;
